remove overflow:hidden to fix mobile landscape mode

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -21,7 +21,6 @@ body {
   background-repeat: no-repeat;
   background-position: 130% 300%, -30% -200%;
   position: relative;
-  overflow: hidden;
 }
 
 .card {
